syntax = "proto3";

import "wso2_options.proto";

option java_multiple_files = true;
option java_package = "org.wso2.micro.gateway.tests.grpc.gen";

message TestRequest {
    string testReqString = 1;
}

message TestResponse {
    string testResString = 1;
}

service TestService {
    rpc testCall(TestRequest) returns (TestResponse);

	//production endpoints
	option (wso2.production_endpoints) = {
		url : "http://localhost:50051";
	};

	//service level security
    option (wso2.security) = NONE;
}

//todo: provide a generic service name since Basic Auth is added.
service JwtAuthTestService {
    rpc testCall(TestRequest) returns (TestResponse);

    rpc testCallWithScopes(TestRequest) returns (TestResponse){
        option (wso2.method_scopes) = "scope_1";
    };

	//production endpoints
	option (wso2.production_endpoints) = {
		url : "http://localhost:50051";
	};

	//service level security
    option (wso2.security) = JWT;
    option (wso2.security) = BASIC;
}

service ThrottlingTestService {
    rpc testCallServiceThrottling(TestRequest) returns (TestResponse);

    rpc testCallMethodThrottling(TestRequest) returns (TestResponse) {
        option (wso2.method_throttling_tier) = "3PerMin";
    };

    option (wso2.throttling_tier) = "15PerMin";

    option (wso2.production_endpoints) = {
        url : "http://localhost:50051";
    };

    //service level security
    option (wso2.security) = JWT;
}